--- a/TelemetryPortal/Components/Pages/Clients/Edit.razor
+++ b/TelemetryPortal/Components/Pages/Clients/Edit.razor
@@ -2,6 +2,7 @@
 @using Microsoft.EntityFrameworkCore
 @using TelemetryPortal.Data
 @using TelemetryPortal.Models
+@using TelemetryPortal.Services
 @rendermode InteractiveServer
 
 <h3>Edit Client</h3>
@@ -31,9 +32,9 @@
 
 @code {
     [Inject]
-    TechtrendsContext DbContext { get; set; }
+    IClientService ClientService { get; set; }
     [Inject]
-    NavigationManager navigationManager { get; set; }
+    NavigationManager NavigationManager { get; set; }
 
     [Parameter]
     public Guid ClientId { get; set; }
@@ -42,17 +43,16 @@
 
     protected override async Task OnInitializedAsync()
     {
-        client = await DbContext.Clients.FindAsync(ClientId);
+        client = await ClientService.GetClientByIdAsync(ClientId);
         if (client == null)
         {
-            navigationManager.NavigateTo("/clients");
+            NavigationManager.NavigateTo("/clients");
         }
     }
 
     private async Task HandleValidSubmit()
     {
-        DbContext.Clients.Update(client);
-        await DbContext.SaveChangesAsync();
-        navigationManager.NavigateTo("/clients");
+        await ClientService.UpdateClientAsync(client);
+        NavigationManager.NavigateTo("/clients");
     }
 }
