--- a/TelemetryPortal/Components/Pages/Projects/Delete.razor
+++ b/TelemetryPortal/Components/Pages/Projects/Delete.razor
@@ -1,6 +1,9 @@
 ﻿@page "/delete-project/{ProjectId:guid}"
 @using TelemetryPortal.Data
 @using TelemetryPortal.Models
+@using TelemetryPortal.Services
+@inject IProjectService ProjectService
+@inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
 <h3>Delete Project</h3>
@@ -18,11 +21,6 @@ else
 }
 
 @code {
-    [Inject]
-    TechtrendsContext DbContext { get; set; }
-    [Inject]
-    NavigationManager navigationManager { get; set; }
-
     [Parameter]
     public Guid ProjectId { get; set; }
 
@@ -30,11 +28,11 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        // Load the project details from the database
-        project = await DbContext.Projects.FindAsync(ProjectId);
+        // Load the project details using ProjectService
+        project = await ProjectService.GetProjectByIdAsync(ProjectId);
         if (project == null)
         {
-            navigationManager.NavigateTo("/projects");
+            NavigationManager.NavigateTo("/projects");
         }
     }
 
@@ -42,9 +40,8 @@ else
     {
         if (project != null)
         {
-            DbContext.Projects.Remove(project);
-            await DbContext.SaveChangesAsync();
-            navigationManager.NavigateTo("/projects");
+            await ProjectService.RemoveProjectAsync(project);
+            NavigationManager.NavigateTo("/projects");
         }
     }
 }
