--- a/TelemetryPortal/Components/Pages/Clients/Details.razor
+++ b/TelemetryPortal/Components/Pages/Clients/Details.razor
@@ -2,6 +2,7 @@
 @using Microsoft.EntityFrameworkCore
 @using TelemetryPortal.Data
 @using TelemetryPortal.Models
+@using TelemetryPortal.Services
 @rendermode InteractiveServer
 
 <h3>Client Details</h3>
@@ -26,9 +27,9 @@ else
 
 @code {
     [Inject]
-    TechtrendsContext DbContext { get; set; }
+    IClientService ClientService { get; set; }
     [Inject]
-    NavigationManager navigationManager { get; set; }
+    NavigationManager NavigationManager { get; set; }
 
     [Parameter]
     public Guid ClientId { get; set; }
@@ -37,10 +38,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        client = await DbContext.Clients.FindAsync(ClientId);
+        client = await ClientService.GetClientByIdAsync(ClientId);
         if (client == null)
         {
-            navigationManager.NavigateTo("/clients");
+            NavigationManager.NavigateTo("/clients");
         }
     }
 }
