--- a/TelemetryPortal/Components/Pages/Projects/Create.razor
+++ b/TelemetryPortal/Components/Pages/Projects/Create.razor
@@ -1,6 +1,9 @@
 ﻿@page "/create-project"
 @using TelemetryPortal.Data
 @using TelemetryPortal.Models
+@using TelemetryPortal.Services
+@inject IProjectService ProjectService
+@inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
 <h3>Create New Project</h3>
@@ -40,11 +43,6 @@
 </EditForm>
 
 @code {
-    [Inject]
-    TechtrendsContext DbContext { get; set; }
-    [Inject]
-    NavigationManager navigationManager { get; set; }
-
     private Project newProject = new Project();
 
     // Use a string property to bind the GUID
@@ -73,11 +71,10 @@
             Console.WriteLine($"ProjectDescription: {newProject.ProjectDescription}");
             Console.WriteLine($"ProjectCreationDate: {newProject.ProjectCreationDate}");
             Console.WriteLine($"ProjectStatus: {newProject.ProjectStatus}");
-            //Console.WriteLine($"ClientId: {newProject.ClientId}");
+            Console.WriteLine($"ClientId: {newProject.ClientId}");
 
-            DbContext.Projects.Add(newProject);
-            await DbContext.SaveChangesAsync();
-            navigationManager.NavigateTo("/projects");
+            await ProjectService.AddProjectAsync(newProject);
+            NavigationManager.NavigateTo("/projects");
         }
         else
         {
